# cligram

./: README.md  cligram.service  pyproject.toml
generated-files/: cligram.service  dark-send.service
src/cligram/: cli.py  config.py  core.py  daemon.py
src/cligram.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dark_send/: cli.py  core.py
